Move test files into test/ directory
Again, we now only need to replace `"./lib"` with `"../lib"` in
`test_helper.rb` to support this change.

We did have to update the CI job to look for the tests in
`./test/*_test.rb` instead of `./*_test.rb` because it has no other way
of knowing where they are.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Install dependencies
         run: gem install minitest
       - name: Run tests
-        run: ruby -e 'ARGV.each { |f| require f }' ./*_test.rb
+        run: ruby -e 'ARGV.each { |f| require f }' ./test/*_test.rb
