--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
-      - name: Install dependencies
-        run: gem install minitest
+          bundler-cache: true
       - name: Run tests
         run: rake test
