--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,4 +11,4 @@ jobs:
           ruby-version: 2.7
           bundler-cache: true
       - name: Run tests
-        run: rake test
+        run: bundle exec rake test
